<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>

    <string name="night_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="terms_of_use">Пользовательское соглашение</string>
    <string name="message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_adress">v.klimushin@ya.ru</string>
    <string name="terms">https://yandex.ru/legal/practicum_termsofuse/</string>

    <string name="album_logo">album_logo</string>
    <string name="track_name">Track name</string>
    <string name="track_author">Track author</string>
    <string name="track_time">00:00</string>

    <string name="nothing_found">Ничего не найдено</string>
    <string name="failure_text">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="history_search">Вы искали</string>
    <string name="remove_history">Очистить историю</string>

    <string name="image_album">лого альбома</string>
    <string name="label_track_time">Длительность</string>
    <string name="label_album_name">Альбом</string>
    <string name="label_release_date">Год</string>
    <string name="label_genre_name">Жанр</string>
    <string name="label_country">Страна</string>
    <string name="album_name">Album name</string>
    <string name="release_date">2023</string>
    <string name="genre_name">Genre name</string>
    <string name="country">Country</string>

    <string name="button_add">кнопка добавить</string>
    <string name="button_play">кнопка играть</string>
    <string name="button_like">кнопка лайк</string>

    <string name="library_is_empty">Ваша медиатека пуста</string>
    <string name="playlist_is_empty">Вы не создали \n ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>

    <string name="favorite">Избранные треки</string>
    <string name="playlists">Плейлисты</string>

    <string name="name">Название*</string>
    <string name="about">Описание</string>
    <string name="create">Создать</string>
    <string name="playlist_is_creation">Плейлист %s создан</string>
    <string name="dialog_title">Завершить создание плейлиста?</string>
    <string name="dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="dialog_neutral">Отмена</string>
    <string name="dialog_positive">Завершить</string>
    <string name="edit_title">Редактировать</string>
    <string name="save_playlist">Сохранить</string>

    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="track_in_playlist">Трек уже добавлен в плейлист</string>
    <string name="track_add_in_playlist">Добавлено в плейлист</string>
    
    <string name="total_time"> минут</string>
    <string name="delete_dialog">Хотите удалить трек?</string>
    <string name="accept">Да</string>
    <string name="dismiss">Нет</string>

    <string name="playlist_empty">В плейлисте нет ни одного трека, которым можно поделиться</string>
    
    <string name="share_playlist">Поделиться</string>
    <string name="edit_information">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="dialog_delete_playlist">Хотите удалить плейлист "%s"?</string>
    <string name="empty_playlist_message">В плейлисте нет треков</string>
    
    <plurals name="plurals">
        <item quantity="zero">%d треков</item>
        <item quantity="one">%d трек</item>
        <item quantity="two">%d трека</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>
</resources>