<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settingsFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnBackground"
    android:orientation="vertical"
    android:paddingTop="14dp"
    tools:context=".ui.settings.fragment.SettingsFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/padding_16"
        android:paddingBottom="@dimen/padding_36"
        android:text="@string/settings"
        android:textSize="@dimen/text_22"
        android:fontFamily="@font/ys_display_medium"
        android:textFontWeight="500"
        android:textColor="?attr/colorPrimaryVariant"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher"
        android:text="@string/night_theme"
        android:layout_marginHorizontal="@dimen/padding_16"
        android:layout_gravity="start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextStyle" />

    <FrameLayout
        android:layout_width="match_parent"
        android:id="@+id/buttonShare"
        android:layout_height="@dimen/settings_button"
        android:paddingHorizontal="@dimen/padding_16"
        android:foreground="?attr/selectableItemBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            style="@style/TextStyle"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/share"
            android:layout_gravity="end"
            style="@style/IconStyle"
            android:paddingEnd="4dp"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:id="@+id/buttonSupport"
        android:layout_height="@dimen/settings_button"
        android:paddingHorizontal="@dimen/padding_16"
        android:foreground="?attr/selectableItemBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/support"
            style="@style/TextStyle"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/support"
            android:layout_gravity="end"
            style="@style/IconStyle"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:id="@+id/buttonTerms"
        android:layout_height="@dimen/settings_button"
        android:paddingHorizontal="@dimen/padding_16"
        android:foreground="?attr/selectableItemBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_of_use"
            style="@style/TextStyle"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_forward"
            android:layout_gravity="end"
            style="@style/IconStyle"
            android:paddingEnd="4dp"/>
    </FrameLayout>

</LinearLayout>