<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:paddingVertical="@dimen/padding_8"
    android:paddingHorizontal="16dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/albumImage"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_placeholder"
        android:contentDescription="@string/album_logo"/>
    
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="@dimen/padding_8">

        <TextView
            android:id="@+id/trackName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:text="@string/track_name"
            android:textColor="?attr/colorPrimaryVariant"
            android:textSize="@dimen/text_16"
            android:fontFamily="@font/ys_display_regular"
            android:textFontWeight="400"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/artistName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/track_author"
                android:textColor="?attr/colorOnPrimary"
                android:maxLength="30"
                android:lines="1"
                android:ellipsize="end"
                android:textSize="@dimen/text_11"
                android:fontFamily="@font/ys_display_regular"
                android:textFontWeight="400"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic"
                app:tint="?attr/colorOnPrimary"/>

            <TextView
                android:id="@+id/trackTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/track_time"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="@dimen/text_11"
                android:fontFamily="@font/ys_display_regular"
                android:textFontWeight="400"/>

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow_forward_24"
        android:layout_gravity="center"
        app:tint="?attr/colorOnPrimary"/>

</LinearLayout>