<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backround"
    android:orientation="vertical"
    android:paddingHorizontal="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/main_tsize"
        android:layout_marginTop="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="40dp">

        <Button
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:text="@string/search"
            android:textSize="@dimen/main_tsize"
            android:textColor="@color/black"
            app:icon="@drawable/search"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/main_padonicon"
            app:iconTint="@color/black"
            app:cornerRadius="@dimen/main_cornersize"
            android:foreground="?attr/selectableItemBackground"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/library"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:text="@string/library"
            android:textSize="@dimen/main_tsize"
            android:textColor="@color/black"
            app:icon="@drawable/library"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/main_padonicon"
            app:iconTint="@color/black"
            app:cornerRadius="@dimen/main_cornersize"
            android:foreground="?attr/selectableItemBackground"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingBottom="28dp">

        <Button
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:text="@string/settings"
            android:textSize="@dimen/main_tsize"
            android:textColor="@color/black"
            app:icon="@drawable/settings"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/main_padonicon"
            app:iconTint="@color/black"
            app:cornerRadius="@dimen/main_cornersize"
            android:foreground="?attr/selectableItemBackground"/>
    </LinearLayout>

</LinearLayout>