<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnBackground"
    android:orientation="vertical"
    android:paddingTop="14dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back"
            android:paddingStart="@dimen/padding_20"
            app:tint="?attr/colorPrimaryVariant"
            android:layout_gravity="center"
            android:contentDescription="@string/settings" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="28dp"
            android:text="@string/settings"
            android:textSize="@dimen/text_22"
            android:fontFamily="@font/ys_display_medium"
            android:textFontWeight="500"
            android:textColor="?attr/colorPrimaryVariant"/>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_button"
        android:paddingHorizontal="@dimen/padding_16">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/night_theme"
            style="@style/TextStyle"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/IconStyle"
            android:layout_gravity="end"
            android:paddingEnd="2dp"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:id="@+id/buttonShare"
        android:layout_height="@dimen/settings_button"
        android:paddingHorizontal="@dimen/padding_16"
        android:foreground="?attr/selectableItemBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            style="@style/TextStyle"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/share"
            android:layout_gravity="end"
            style="@style/IconStyle"
            android:paddingEnd="4dp"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:id="@+id/buttonSupport"
        android:layout_height="@dimen/settings_button"
        android:paddingHorizontal="@dimen/padding_16"
        android:foreground="?attr/selectableItemBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/support"
            style="@style/TextStyle"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/support"
            android:layout_gravity="end"
            style="@style/IconStyle"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:id="@+id/buttonTerms"
        android:layout_height="@dimen/settings_button"
        android:paddingHorizontal="@dimen/padding_16"
        android:foreground="?attr/selectableItemBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_of_use"
            style="@style/TextStyle"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_forward"
            android:layout_gravity="end"
            style="@style/IconStyle"
            android:paddingEnd="4dp"/>
    </FrameLayout>


</LinearLayout>